crates/sgf-core/tests/snapshots/ops_copy_planet/paste_giant_into_216.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added planet #16777273 to Kazam system #216 (pc_gas_giant, size 30) at orbit 256 at 0°, with 3 moons and 3 deposits; set the inner radius of Kazam system #216 from 230 to 311
inverse: Batch { description: "Undo of \"Added planet #16777273 to Kazam system #216 (pc_gas_giant, size 30) at orbit 256 at 0°, with 3 moons and 3 deposits; set the inner radius of Kazam system #216 from 230 to 311\"", ops: [RemoveBody { body: 6377 }, RemoveBody { body: 6376 }, RemoveBody { body: 6375 }, RemoveBody { body: 16777273 }, SetInnerRadius { system: 216, radius: 230.0 }] }

--- gamestate
+++ gamestate
@@ -44384,6 +44384,10 @@
 		planet=39
 		planet=40
 		planet=41
+		planet=16777273
+		planet=6375
+		planet=6376
+		planet=6377
 		ambient_object=
 		{
 			0 333 
@@ -44441,8 +44445,8 @@
 		{
 			329 
 		}
-		inner_radius=230
-		outer_radius=330
+		inner_radius=311
+		outer_radius=411
 		starbases=
 		{
 			4294967295 53 
@@ -82369,7 +82373,52 @@
 				128 
 			}
 		}
-		57=none
+		16777273=
+		{
+			planet_class="pc_gas_giant"
+			planet_size=30
+			carrier_binary_flags=1
+			name=
+			{
+				key="HUM1_PLANET_UltraksPoint"
+			}
+			binary_flags=322
+			coordinate=
+			{
+				x=256
+				y=0
+				origin=216
+			}
+			orbit=256
+			last_bombardment=			"0.01.01"
+			moons=
+			{
+				6375 6376 6377 
+			}
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			timed_modifier=
+			{
+				items=
+				{
+					
+					{
+						modifier="harvested_resources_mining"
+						days=360
+					}
+ 
+				}
+			}
+			planet_modifier="pm_extensive_moon_system"
+			entity=3
+			entity_name="gas_giant_05_entity"
+			deposits=
+			{
+				16777216 
+			}
+		}
 		58=
 		{
 			colony=30
@@ -411928,6 +411977,89 @@
 				4047 
 			}
 		}
+		6375=
+		{
+			planet_class="pc_frozen"
+			planet_size=7
+			carrier_binary_flags=1
+			name=
+			{
+				key="HUM1_PLANET_HadriggasBastion"
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=268.74356
+				y=-7.91212
+				origin=216
+			}
+			orbit=15
+			last_bombardment=			"0.01.01"
+			moon_of=16777273
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=2
+			deposits=
+			{
+				16777217 
+			}
+		}
+		6376=
+		{
+			planet_class="pc_barren_cold"
+			planet_size=6
+			carrier_binary_flags=1
+			name=
+			{
+				key="HUM1_PLANET_GarbanogsDwelling"
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=236.9158
+				y=6.0462
+				origin=216
+			}
+			orbit=20.01907
+			last_bombardment=			"0.01.01"
+			moon_of=16777273
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		6377=
+		{
+			planet_class="pc_barren_cold"
+			planet_size=9
+			carrier_binary_flags=1
+			name=
+			{
+				key="HUM1_PLANET_KojoggsKeep"
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=272.50747
+				y=18.77508
+				origin=216
+			}
+			orbit=25
+			last_bombardment=			"0.01.01"
+			moon_of=16777273
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=2
+			deposits=
+			{
+				16777218 
+			}
+		}
 	}
 }
 astral_rifts=
@@ -1076220,9 +1076352,33 @@
 }
 deposit=
 {
-	0=none
-	1=none
-	2=none
+	16777216=
+	{
+		type="d_energy_5"
+		deposit_holder=
+		{
+			type=0
+			id=16777273
+		}
+	}
+	16777217=
+	{
+		type="d_engineering_2"
+		deposit_holder=
+		{
+			type=0
+			id=6375
+		}
+	}
+	16777218=
+	{
+		type="d_minerals_5"
+		deposit_holder=
+		{
+			type=0
+			id=6377
+		}
+	}
 	3=none
 	4=none
 	5=none
