crates/sgf-core/tests/snapshots/ops_copy_planet/paste_group_into_216_at_135.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Pasted 3 planets into Kazam system #216
inverse: Batch { description: "Pasted 3 planets into Kazam system #216", ops: [RemoveBody { body: 6379 }, RemoveBody { body: 6378 }, RemoveBody { body: 6377 }, RemoveBody { body: 6376 }, RemoveBody { body: 6375 }, RemoveBody { body: 16777273 }] }

--- gamestate
+++ gamestate
@@ -44384,6 +44384,12 @@
 		planet=39
 		planet=40
 		planet=41
+		planet=16777273
+		planet=6375
+		planet=6376
+		planet=6377
+		planet=6378
+		planet=6379
 		ambient_object=
 		{
 			0 333 
@@ -82369,7 +82375,39 @@
 				128 
 			}
 		}
-		57=none
+		16777273=
+		{
+			planet_class="pc_gas_giant"
+			planet_size=30
+			carrier_binary_flags=1
+			name=
+			{
+				key="HUM1_PLANET_UltraksPoint"
+			}
+			binary_flags=320
+			coordinate=
+			{
+				x=-35.35534
+				y=35.35534
+				origin=216
+			}
+			orbit=50
+			last_bombardment=			"0.01.01"
+			moons=
+			{
+				6375 6376 6377 
+			}
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			planet_modifier="pm_extensive_moon_system"
+			entity=3
+			deposits=
+			{
+				16777216 
+			}
+		}
 		58=
 		{
 			colony=30
@@ -411928,6 +411966,180 @@
 				4047 
 			}
 		}
+		6375=
+		{
+			planet_class="pc_frozen"
+			planet_size=7
+			carrier_binary_flags=1
+			name=
+			{
+				key="HUM1_PLANET_HadriggasBastion"
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=-22.61178
+				y=27.44322
+				origin=216
+			}
+			orbit=15
+			last_bombardment=			"0.01.01"
+			moon_of=16777273
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=2
+			deposits=
+			{
+				16777217 
+			}
+		}
+		6376=
+		{
+			planet_class="pc_barren_cold"
+			planet_size=6
+			carrier_binary_flags=1
+			name=
+			{
+				key="HUM1_PLANET_GarbanogsDwelling"
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=-54.43954
+				y=41.40154
+				origin=216
+			}
+			orbit=20.01907
+			last_bombardment=			"0.01.01"
+			moon_of=16777273
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		6377=
+		{
+			planet_class="pc_barren_cold"
+			planet_size=9
+			carrier_binary_flags=1
+			name=
+			{
+				key="HUM1_PLANET_KojoggsKeep"
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=-18.84787
+				y=54.13042
+				origin=216
+			}
+			orbit=25
+			last_bombardment=			"0.01.01"
+			moon_of=16777273
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=2
+			deposits=
+			{
+				16777218 
+			}
+		}
+		6378=
+		{
+			planet_class="pc_arid"
+			planet_size=16
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="SPEC_Kazam_system"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-74.24621
+				y=74.24621
+				origin=216
+			}
+			orbit=105
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=2
+			deposits=
+			{
+				16777219 16777220 16777221 16777222 16777223 16777224 16777225 16777226 16777227 16777228 16777229 16777230 
+			}
+		}
+		6379=
+		{
+			planet_class="pc_rare_crystal_asteroid"
+			planet_size=5
+			carrier_binary_flags=1
+			name=
+			{
+				key="ASTEROID_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="prefix"
+						value=
+						{
+							key="H-77-"
+						}
+					}
+ 
+					{
+						key="suffix"
+						value=
+						{
+							key="0935"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-95.45942
+				y=95.45942
+				origin=216
+			}
+			orbit=135
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
 	}
 }
 astral_rifts=
@@ -1076220,21 +1076432,141 @@
 }
 deposit=
 {
-	0=none
-	1=none
-	2=none
-	3=none
-	4=none
-	5=none
-	6=none
-	7=none
-	8=none
-	9=none
-	10=none
-	11=none
-	12=none
-	13=none
-	14=none
+	16777216=
+	{
+		type="d_energy_5"
+		deposit_holder=
+		{
+			type=0
+			id=16777273
+		}
+	}
+	16777217=
+	{
+		type="d_engineering_2"
+		deposit_holder=
+		{
+			type=0
+			id=6375
+		}
+	}
+	16777218=
+	{
+		type="d_minerals_5"
+		deposit_holder=
+		{
+			type=0
+			id=6377
+		}
+	}
+	16777219=
+	{
+		type="d_veiny_cliffs"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777220=
+	{
+		type="d_arid_highlands"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777221=
+	{
+		type="d_bubbling_swamp"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777222=
+	{
+		type="d_arid_highlands"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777223=
+	{
+		type="d_veiny_cliffs"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777224=
+	{
+		type="d_fertile_lands"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777225=
+	{
+		type="d_great_river"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777226=
+	{
+		type="d_searing_desert"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777227=
+	{
+		type="d_crystalline_caverns"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777228=
+	{
+		type="d_fertile_lands"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777229=
+	{
+		type="d_dust_desert"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777230=
+	{
+		type="d_veiny_cliffs"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
 	15=none
 	16=none
 	17=none
@@ -1133540,7 +1133872,6 @@
 		"5498"
 		"U-46"
 		"094"
-		"0935"
 		"6759"
 		"78"
 		"141"
